[project]
name = "tcharl.fail2ban"
version = "0.1.0"
description = "Install fail2ban on a server"
authors = [
    {name = "Charlie Mordant", email = "cmordant1@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ansible>=11.5.0",
]

[dependency-groups]
dev = [
    "flake8",
    "yamllint",
    "tox",
    "pytest-testinfra",
    "molecule>=25.0,<26.0",
    "molecule-plugins[podman]==25.8.12",
    "ansible-lint==26.4.0 ; platform_system != 'Windows'",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "defaults/**",
    "handlers/**",
    "meta/**",
    "tasks/**",
    "vars/**",
]
